--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <!-- Custom CSS -->
     <style>
         body {
-            background-image: url('https://thumbs.dreamstime.com/b/doctor-medical-background-24834402.jpg');
+            background-image: url('https://i.pinimg.com/564x/aa/d6/55/aad6554488f5ed2648c4151d9dd68b1a.jpg');
             background-size: cover;
             background-repeat: no-repeat;
         }
